# pr_3000_core

./: .gitignore  .gitmodules  LICENSE  P3000_MPC_plumbing _integration.md  README.md  data.mat  data_build.m  gazebo_test_questions.md  get_slope.m  load_body.m  logic_01.m  rect_bogie_frc.m  rect_model.slx  rect_model.slxc  rect_test.m
ocp_test/matlab_files/: unicycle_model.asv  unicycle_model.m
ocp_test/py_files/: castest.py  main_sim.py  make_euler_step.py  ocppytest.py  unicycle_casadi.py
ocp_test/py_files/core_p3000/: CMakeLists.txt  cloop_test_1.py  cloop_test_1_plottest.py  clptest_pr3000_acsds.py  generated_p300_solver.py  main_test01.cpp  mpccontroller.cpp  mpccontroller.hpp  plant.py
ocp_test/py_files/nmpc-env/: pyvenv.cfg
slprj/sim/varcache/rect_model/: checksumOfCache.mat  varInfo.mat
slprj/sim/varcache/rect_model/tmwinternal/: simulink_cache.xml
